2012-03-02  Mike Frysinger  <vapier@gentoo.org>

  * src/svf/svf.c (urj_svf_run): Detect unset cables to avoid crashes when
    using the command line interface.  Patch by Scott Tsai.

  * include/urjtag/part.h (urj_part_set_signal_{high,low,input}): Add helpers
    for controlling levels to make code reading easier.  Work by Miklós Márton.

  * src/bus/*.c: Convert to new urj_part_set_signal helpers.  Work partially
    by Miklós Márton.

2012-02-29  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/xc6slx16/STEPPINGS: Add stepping 2 by Christoffer Kjølbæk.

2011-12-10  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/tap.h, src/cmd/cmd_detect.c, src/tap/detect.c,
    src/tap/discovery.c: Extend urj_tap_detect API to allow callers to set
    the number of IR bits to detect.  Patch by Steve Tell.

  * src/tap/register.c: Check incoming register arg before we use it.  Patch
    by Steve Tell.

  * include/urjtag/tap_register.h, src/tap/register.c: Add get/set register
    value variants that allow you to get a slice of bits.  Patch by Steve Tell.

  * Makefile.am: Add bindings to SUBDIRS.
  * configure.ac: Add --enable-python flag to control python support.
  * doc/urjtag-python.txt: Document new python bindings.
  * bindings/: New subdir to hold language bindings.
  * bindings/python/: New python bindings by Steve Tell.

2011-12-05  Mike Frysinger  <vapier@gentoo.org>

  * src/apps/jtag/jtag.c: Simplify readline ifdefs a little as suggested
    by MÃ¡rton NÃ©meth.

2011-11-16  Jie Zhang  <jie.zhang@analog.com>

  * data/analog/PARTS: Update comment.

2011-11-11  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/bfin.h (part_bypass): Remove declaration.

2011-11-06  Uwe Hermann  <uwe@hermann-uwe.de>

  * data/toshiba/tmpa9xx/tmpa9xx, data/toshiba/tmpa9xx/STEPPINGS: Add stepping
    and basic JTAG register/instruction info for Toshiba TMPA9xx series
    microcontrollers (ARM9 / ARM926EJ-S).
  * data/toshiba/PARTS: Add entry for Toshiba TMPA9xx.