@@ -52,6 +52,7 @@ _URJ_USB_FTDX(flyswatter)
 _URJ_USB_FTDX(gnice)
 _URJ_USB_FTDX(gniceplus)
 _URJ_USB_FTDX(jtagkey)
+_URJ_USB_FTDX(ktlink)
 _URJ_USB_FTDX(milkymist)
 _URJ_USB_FTDX(oocdlinks)
 _URJ_USB_FTDX(signalyzer)
